chore(init): initialiser le projet MAven JavaFX 21 et les dépendances de base